--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
                     <div class="card-body">
                         <img src="assets/img/Game/10084.png" alt="替代文字一" title="拉雞絲">
                         <img src="assets/img/Game/10138.png" alt="替代文字一" title="悠咪">
-                        <img src="assets/img/Game/10009.png" alt="替代文字一" title="費德提克">
-                        <img src="assets/img/Game/10071.png" alt="替代文字一" title="潘森">
-                        <img src="assets/img/Game/10032.png" alt="替代文字一" title="阿姆姆">
                         <img src="assets/img/Game/10025.png" alt="替代文字一" title="魔甘娜">
-                        <img src="assets/img/Game/10077.png" alt="替代文字一" title="蓋倫">
                         <img src="assets/img/Game/10067.png" alt="替代文字一" title="奈德利">
                         <img src="assets/img/Game/10053.png" alt="替代文字一" title="茂凱">
                     </div>
@@ -93,6 +89,7 @@
                         <img src="assets/img/Game/10128.png" alt="替代文字一" title="珊娜">
                         <img src="assets/img/Game/10070.png" alt="替代文字一" title="古拉格斯">
                         <img src="assets/img/Game/10048.png" alt="替代文字一" title="凱特琳">
+                        <img src="assets/img/Game/10129.png" alt="替代文字一" title="路西恩">
                     </div>
                 </div>
                 <div class="card shadow mb-4">
